--- a/test/klippy/input_shaper.cfg
+++ b/test/klippy/input_shaper.cfg
@@ -71,8 +71,9 @@ max_z_accel: 100
 shaper_type_x: mzv
 shaper_freq_x: 33.2
 shaper_type_y: ei
-shaper_freq_x: 39.3
+shaper_freq_y: 39.3
 damping_ratio_y: 0.4
+shaper_freq_z: 42
 
 [adxl345]
 cs_pin: PK7
