--- a/src/Kconfig
+++ b/src/Kconfig
@@ -2,6 +2,8 @@
 
 mainmenu "Klipper Firmware Configuration"
 
+source "src/configs/Kconfig"
+
 config LOW_LEVEL_OPTIONS
     bool "Enable extra low-level configuration options"
     help
@@ -24,6 +26,8 @@ choice
         bool "Huada Semiconductor HC32F460"
     config MACH_RPXXXX
         bool "Raspberry Pi RP2040/RP235x"
+    config MACH_GD32
+	bool "Giga Device GD32"
     config MACH_PRU
         bool "Beaglebone PRU"
     config MACH_AR100
@@ -41,10 +45,16 @@ source "src/lpc176x/Kconfig"
 source "src/stm32/Kconfig"
 source "src/hc32f460/Kconfig"
 source "src/rp2040/Kconfig"
+source "src/gd32/Kconfig"
 source "src/pru/Kconfig"
 source "src/ar100/Kconfig"
 source "src/linux/Kconfig"
 source "src/simulator/Kconfig"
+
+config MCU_MENU
+	string 
+	default "S" if MACH_STM32
+	default "G" if MACH_GD32
 
 # Generic configuration options for serial ports
 config SERIAL
@@ -303,6 +313,13 @@ config INITIAL_PINS
         during the micro-controller startup sequence. By default the
         pins will be set to output high - preface a pin with a '!'
         character to set that pin to output low.
+
+config BUILD_MACHINE_UID
+	string "Custom your machine firmware name as unique ID"
+	depends on LOW_LEVEL_OPTIONS
+	help
+		It is for klipper host making a distinction between each 
+		printer when one host controls more than one machine. 
 
 # The HAVE_x options allow boards to disable support for some commands
 # if the hardware does not support the feature.
